--- a/WhiteLagoon.Web/appsettings.json
+++ b/WhiteLagoon.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=(localdb)\\mssqllocaldb; database=WhiteLagoon; Trusted_Connection=true; MultipleActiveResultSets=true; trustservercertificate=true"
+  }
 }
